Revision history for App-SSH-SwitchShell

{{$NEXT}}

  - Remove non-existing default directories from no_index in META.* files
  - Removed develop dependencies from META.json file
  - Removed x_authority from META.* files
  - Removed x_Dist_Zilla from META.* files
  - Removed x_BuiltWith from META.* files
  - Removed cpanfile from distribution
  - Replaced plugin bundle Author::SKIRMESS with an inline bundle through a Git submodule on https://github.com/skirmess/dzil-inc
  - Removed all 'no critic' comments from the source files

0.005  2017-09-27 17:42:12 UTC

  - Add a "use lib qw(.)" to all tests that require bin/sshss
    http://www.cpantesters.org/cpan/report/ff71e412-a2ac-11e7-9344-ebadca56a595

0.004  2017-09-24 21:35:50 UTC

  - t/00-load.t adds a "use lib qw(.)" which should fix
    http://www.cpantesters.org/cpan/report/9136e46e-9eda-11e7-957d-b956ca56a595

0.003  2017-09-19 21:17:59 UTC

  - Fix tests under Windows

0.002  2017-09-16 16:21:02 UTC

  - Added package App::SSH::SwitchShell from bin/sshss to provides section
    of META.* files

0.001  2017-09-16 14:07:50 UTC

  - Initial release